--- a/src/gui/resources/resources.qrc
+++ b/src/gui/resources/resources.qrc
@@ -6,5 +6,6 @@
         <file>exit.svg</file>
         <file>rrt.png</file>
         <file>close.svg</file>
+        <file>new.png</file>
     </qresource>
 </RCC>
