--- a/src/gui/resources/resources.qrc
+++ b/src/gui/resources/resources.qrc
@@ -7,5 +7,7 @@
         <file>rrt.png</file>
         <file>close.svg</file>
         <file>new.png</file>
+        <file>collapse.svg</file>
+        <file>expand.svg</file>
     </qresource>
 </RCC>
