impl btnCopyNewline and btnCopySemicolon

--- a/src/gui/resources/resources.qrc
+++ b/src/gui/resources/resources.qrc
@@ -9,5 +9,7 @@
         <file>new.png</file>
         <file>collapse.svg</file>
         <file>expand.svg</file>
+        <file>newline.png</file>
+        <file>semicolon.png</file>
     </qresource>
 </RCC>
