added progressbar and db icon for processing XMLs

--- a/src/gui/resources/resources.qrc
+++ b/src/gui/resources/resources.qrc
@@ -11,5 +11,6 @@
         <file>expand.svg</file>
         <file>newline.png</file>
         <file>semicolon.png</file>
+        <file>database.svg</file>
     </qresource>
 </RCC>
