added icon to final exe! added flag to gtest

--- a/src/gui/resources/resources.qrc
+++ b/src/gui/resources/resources.qrc
@@ -12,5 +12,6 @@
         <file>newline.png</file>
         <file>semicolon.png</file>
         <file>database.svg</file>
+        <file>rrt.ico</file>
     </qresource>
 </RCC>
